site otimizado e responsivo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Desenvolvedor Front-End & UX/UI Designer Localizado no rio de janeiro">
   <title>Van3z - Desenvolvedor e Designer</title>
   <script src="https://kit.fontawesome.com/3f0d931dec.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
@@ -12,7 +13,7 @@
 
 <body>
   <header class="header">
-    <img src="./img/logo.svg" alt="Van3z">
+    <img src="./img/logo.svg" alt="Van3z" width="127" height="35">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -23,10 +24,10 @@
   </header>
 
   <main class=" container intro">
-    <img class="foto-perfil" src="./img/perfil-foto.png" alt="Vanessa">
+    <img class="foto-perfil" src="./img/perfil-foto.png" alt="Vanessa" width="360" height="520">
     <div class="texto-intro">
       <h1 class="titulo-dev">Desenvolvedor<br> Front-End &<br> UX/UI Designer</h1>
-      <p>Localizado no rio de janeiro</p>
+      <p>Localizado no rio de janeiro 🏖️</p>
     </div>
   </main>
 
@@ -111,9 +112,9 @@
 
   <footer class="contato" id="contato">
     <ul class="icons">
-      <li><a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
-      <li><a href="https://github.com/TheVanessaSimpson" target="_blank"><i class="fa-brands fa-github-square"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/alcantara-vanessa/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+      <li><a href="#" aria-label="facebook"><i class="fa-brands fa-facebook-square"></i></a></li>
+      <li><a href="https://github.com/TheVanessaSimpson" target="_blank" aria-label="github"><i class="fa-brands fa-github-square"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/alcantara-vanessa/" target="_blank" aria-label="linkdin"><i class="fa-brands fa-linkedin"></i></a></li>
     </ul>
     <i class="fa-brands fa-facebook"></i>
     <h2>© 2022 Van3z</h2>
